# just-host

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENSE  README.md
backend/: .env.toml  Cargo.toml  diesel.toml
backend/fs/: Cargo.toml
backend/fs-file/: Cargo.toml
backend/fs-file/src/: lib.rs
backend/fs/src/: lib.rs  parse_fs.rs
backend/fs/tests/: integration_test.rs
backend/just-host/: Cargo.toml  build.rs
backend/just-host/src/: config.rs  main.rs  models.rs  secure.rs  snowflake.rs
backend/just-host/src/controllers/: errors.rs  user.rs
backend/just-host/src/models/: id.rs  schema.rs  user.rs
backend/migrations/2024-03-15-180753_create_users/: down.sql  up.sql
backend/tests/: Cargo.toml
backend/tests/src/: lib.rs
docker/prod/: Dockerfile  compose.yml
frontend/: .eslintrc.json  .prettierrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.vue  main.ts  style.css
frontend/src/router/: index.ts
