[package]
name = "fs"
version = "0.0.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
fs-file = { version = "0.0.0", path = "../fs-file", default-features = false }
proc-macro2 = { version = "1.0.93", default-features = false }
quote = { version = "1.0.38", default-features = false }
syn = { version = "2.0.96", default-features = false, features = ["parsing", "proc-macro"] }
