[package]
name = "just-host"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", default-features = false, features = ["http1", "tokio"] }
figment = { version = "0.10.15", default-features = false, features = ["env", "toml"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0.57", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", default-features = false, features = ["fs", "trace"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt"] }
