[package]
name = "just-host"
version = "0.0.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "password-hash"] }
axum = { version = "0.7.4", default-features = false, features = ["http1", "json", "tokio"] }
axum-extra = { version = "0.9.2", default-features = false, features = ["cookie"] }
bs58 = { version = "0.5.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.35", default-features = false, features = ["now"] }
convert_case = { version = "0.6.0", default-features = false }
diesel = { version = "2.1.5", default-features = false, features = ["postgres"] }
diesel-async = { version = "0.4.1", default-features = false, features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "2.1.0", default-features = false, features = ["postgres"] }
diesel-derive-newtype = { version = "2.1.1", default-features = false }
diesel_migrations = { version = "2.1.0", default-features = false, features = ["postgres"] }
figment = { version = "0.10.15", default-features = false, features = ["env", "toml"] }
fs = { version = "0.0.0", path = "../fs", default-features = false }
fs-file = { version = "0.0.0", path = "../fs-file", default-features = false }
jsonwebtoken = { version = "9.3.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.57", default-features = false }
time = { version = "0.3.34", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", default-features = false, features = ["fs", "trace"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt"] }
validator = { version = "0.17.0", default-features = false, features = ["derive"] }
