[package]
name = "just-host"
version = "0.0.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "password-hash"] }
axum = { version = "0.8.1", default-features = false, features = ["http1", "json", "tokio"] }
axum-extra = { version = "0.10.0", default-features = false, features = ["cookie"] }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
convert_case = { version = "0.7.1", default-features = false }
diesel = { version = "2.2.6", default-features = false, features = ["postgres"] }
diesel-async = { version = "0.5.2", default-features = false, features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "2.1.0", default-features = false, features = ["postgres"] }
diesel-derive-newtype = { version = "2.1.2", default-features = false }
diesel_migrations = { version = "2.2.0", default-features = false, features = ["postgres"] }
figment = { version = "0.10.19", default-features = false, features = ["env", "toml"] }
fs = { version = "0.0.0", path = "../fs", default-features = false }
fs-file = { version = "0.0.0", path = "../fs-file", default-features = false }
jsonwebtoken = { version = "9.3.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.135", default-features = false, features = ["alloc"] }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.11", default-features = false }
time = { version = "0.3.37", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", default-features = false, features = ["fs", "trace"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["ansi", "fmt"] }
validator = { version = "0.19.0", default-features = false, features = ["derive"] }
